added imports to index.less

--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,13 @@
 // Follow the order in the readme
+// VARS & MIXINS
+@import "variables";
+@import "mixins";
+
+// GENERAL 
+@import "reset";
+@import "global";
+
+// COMPONENTS
+@import "navigation";
+@import "footer";
+@import "home-page.less";
