--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,16 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .welcome-section {
+  width: 100%;
+  margin: 30px 0;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .welcome-section .welcome-text-content {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding-right: 1%;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
