--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,18 @@
 .home {
 
+  .welcome-section{
+    width:100%;
+    margin: 30px 0;
+    border-bottom: 2px dashed @navigation-border;
+    // background-color: green;
+
+    .welcome-text-content {
+      margin-top: 20px;
+      margin-bottom: 10px;
+      padding-right: 1%;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
