--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,8 +1,8 @@
 .home {
-
+  
   .welcome-section{
     width:100%;
-    margin: 30px 0;
+    // margin: 30px 0;
     border-bottom: 2px dashed @navigation-border;
     // background-color: green;
 
