--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,49 @@
 // Navigation Styles here
+.top{
+    // display:flex;
+    // justify-content: space-between;
+    // align-items: center;
+    border-bottom: 2px dashed @navigation-border;
+    padding:30px 0px 30px 0px;
+
+    .top-content{
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 800px;
+        margin: 0 auto;
+        width: 100%;
+        // margin-left:112px;
+        // background-color:red;
+    }
+        
+
+    h1{
+        // background-color: blue;
+    }
+
+    .navigation{
+        // background-color: green;
+        font-size: 1.8rem;
+        color: black;
+
+        a{
+            text-decoration: none;
+            color: black;
+            padding-right: 30px;
+            
+        a:visited {
+            text-decoration: none;
+            color: #000;
+            } 
+        a:hover {
+            text-decoration: none;
+            color: black;
+        }   
+        a:active {
+            text-decoration: none;
+            color: black;
+        }
+      }
+    }
+}
