--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,23 @@
 // Mixins in here
+
+
+
+// .buttons(@radius, @bgcolor){
+// 	border-radius: @justify;
+// 	background-color: @bgcolor;
+// }
+
+.btn{
+    background-color: #157f80;
+    width: 80%;
+    height: 15%;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    color: white;
+    font-size: 1.6rem;
+    margin-bottom: 40px;
+}
+
+
