--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,13 +2,12 @@
 
 
 
-// .buttons(@radius, @bgcolor){
-// 	border-radius: @justify;
-// 	background-color: @bgcolor;
-// }
+.buttons(@bgcolor, @mbottom){
+    background-color: @bgcolor;
+    margin-bottom: @mbottom;
+}
 
 .btn{
-    background-color: #157f80;
     width: 80%;
     height: 15%;
     border-radius: 10px;
@@ -17,7 +16,9 @@
     display: flex;
     color: white;
     font-size: 1.6rem;
-    margin-bottom: 40px;
+    // margin-bottom: 20px;
+    // background-color: #157f80;
+    .buttons(#157f80, 20px);
 }
 
 
