--- a/css/index.css
+++ b/css/index.css
@@ -184,6 +184,12 @@ img {
   border-bottom: 2px dashed #C0C0C0;
   padding: 30px 0px 30px 0px;
 }
+@media (max-width: 500px) {
+  .top {
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+}
 .top .top-content {
   display: flex;
   justify-content: space-between;
@@ -191,6 +197,17 @@ img {
   max-width: 800px;
   margin: 0 auto;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .top .top-content {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  .top h1 {
+    padding-bottom: 15px;
+  }
 }
 .top .navigation {
   font-size: 1.8rem;
@@ -224,6 +241,11 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+@media (max-width: 500px) {
+  .home {
+    width: 90%;
+  }
+}
 .home .welcome-section {
   width: 100%;
   border-bottom: 2px dashed #C0C0C0;
@@ -239,13 +261,29 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -253,6 +291,11 @@ img {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -266,6 +309,11 @@ img {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -275,7 +323,31 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 100%;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  .home .content-pick .destination .btn {
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    color: white;
+    font-size: 1.6rem;
+    background-color: #157f80;
+    margin-bottom: 20px;
+  }
 }
