--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,8 @@
 .home {
-  
+  @media @mobile{
+    width: 90%;
+    // background-color: green;
+}
   .welcome-section{
     width:100%;
     // margin: 30px 0;
@@ -19,16 +22,30 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @mobile{
+      display:flex;
+      flex-direction:column;
+      // background-color: green;
+  }
+
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile{
+        width: 100%;
+        // background-color: green;
+    }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile{
+        width: 100%;
+        // background-color: green;
+    }
 
       img {
         border-radius: 10px;
@@ -39,6 +56,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media @mobile{
+      flex-direction: column-reverse;
+      // background-color: green;
+  }
 
     .text-content {
       padding-left: 1%;
@@ -54,6 +75,10 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @mobile{
+      width: 100%;
+      // background-color: green;
+  }
 
     img {
       border-radius: 10px;
@@ -66,9 +91,40 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile{
+      flex-direction: column;
+      // background-color: green;
+  }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile{
+        width: 100%;
+        padding-right: 20px;
+        padding-left: 20px;
+        // background-color: green;
+
+        .buttons(@bgcolor, @mbottom){
+          background-color: @bgcolor;
+          margin-bottom: @mbottom;
+      }
+      
+        .btn{
+          width: 100%;
+          height: 40px;
+          border-radius: 10px;
+          align-items: center;
+          justify-content: center;
+          display: flex;
+          color: white;
+          font-size: 1.6rem;
+          // margin-bottom: 20px;
+          // background-color: #157f80;
+          .buttons(#31dfe0,);
+      }
+    }
     }
   }
 }// home
